--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -43,7 +44,7 @@ h1 {
 }
 
 .logo {
-  height: 6em;
+  height: 9em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
@@ -94,5 +95,3 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
-
-
