--- a/frontend/src/gamestyle.css
+++ b/frontend/src/gamestyle.css
@@ -1,4 +1,15 @@
-@import "tailwindcss";
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+
+.pixel-font {
+    font-family: 'Press Start 2P', cursive;
+}
+
+.inter-font{
+	font-family: 'Inter', sans-serif;
+}
 
 /* body {
     margin: 0;
