--- a/frontend/src/gamestyle.css
+++ b/frontend/src/gamestyle.css
@@ -1,7 +1,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
+@import "tailwindcss";
 
 .pixel-font {
     font-family: 'Press Start 2P', cursive;
@@ -9,6 +9,18 @@
 
 .inter-font{
 	font-family: 'Inter', sans-serif;
+}
+
+.button-primary {
+	@apply px-12 py-2 space-x-3 rounded-full font-semibold text-lg flex items-center justify-center bg-yellow-400 text-black hover:bg-yellow-300 transition duration-200;
+}
+
+.button-remove {
+	@apply w-6 h-6 bg-yellow-400 rounded flex items-center justify-center hover:bg-yellow-300;
+}
+
+.radio-language {
+	@apply appearance-none w-6 h-6 border-4 rounded-full cursor-pointer bg-transparent transition-all ease-in-out duration-200 group-hover:border-yellow-500 checked:border-yellow-500 checked:bg-yellow-300
 }
 
 /* body {
