--- a/frontend/src/gamestyle.css
+++ b/frontend/src/gamestyle.css
@@ -23,6 +23,14 @@
 	@apply appearance-none w-6 h-6 border-4 rounded-full cursor-pointer bg-transparent transition-all ease-in-out duration-200 group-hover:border-yellow-500 checked:border-yellow-500 checked:bg-yellow-300
 }
 
+.err-msg {
+	@apply text-red-500 text-lg font-semibold;
+}
+
+.select-map {
+	@apply rounded-xl shadow-yellow-300  border-4 hover:grayscale-0 transition-all duration-300 ease-in-out cursor-pointer;
+}
+
 /* body {
     margin: 0;
     padding: 0;
