--- a/frontend/src/gamestyle.css
+++ b/frontend/src/gamestyle.css
@@ -12,7 +12,7 @@
 }
 
 .button-primary {
-	@apply px-12 py-2 space-x-3 rounded-full font-semibold text-lg flex items-center justify-center bg-yellow-400 text-black hover:bg-yellow-300 transition duration-200;
+	@apply px-12 py-2 space-x-3 rounded-full font-semibold text-lg text-center bg-yellow-400 text-black hover:bg-yellow-300 transition duration-200;
 }
 
 .button-remove {
@@ -30,6 +30,39 @@
 .select-map {
 	@apply rounded-xl shadow-yellow-300  border-4 hover:grayscale-0 transition-all duration-300 ease-in-out cursor-pointer;
 }
+
+.match-win {
+	@apply py-2 bg-green-500 rounded-xl text-center font-bold tracking-widest text-xl;
+}
+
+.match-lose {
+	@apply py-2 bg-red-500 rounded-xl text-center font-bold tracking-widest text-xl;
+}
+
+.prize-1 {
+	@apply w-10 h-10 bg-yellow-400 rounded-full flex items-center justify-center  text-black text-xl font-bold;
+}
+
+.prize-2 {
+	@apply w-10 h-10 bg-gray-100 rounded-full flex items-center justify-center  text-black text-xl font-bold;
+}
+
+.prize-3 {
+	@apply w-10 h-10 bg-orange-700 rounded-full flex items-center justify-center text-white text-xl font-bold;
+}
+
+.prize-4 {
+	@apply w-10 h-10 bg-blue-900 rounded-full flex items-center justify-center text-white text-xl font-bold;
+}
+
+.result-win{
+	@apply text-green-500 font-bold tracking-widest;
+}
+
+.result-lose {
+	@apply text-red-500 font-bold tracking-widest;
+}
+
 
 /* body {
     margin: 0;
