--- a/frontend/src/gamestyle.css
+++ b/frontend/src/gamestyle.css
@@ -15,6 +15,10 @@
 	@apply px-12 py-2 space-x-3 rounded-full font-semibold text-lg flex items-center justify-center bg-yellow-400 text-black hover:bg-yellow-300 transition duration-200;
 }
 
+.button-secondary {
+	@apply px-12 py-2 space-x-3 rounded-full font-semibold text-lg flex items-center justify-center border-2 border-yellow-400 hover:bg-yellow-400/20 transition duration-200;
+}
+
 .button-remove {
 	@apply w-6 h-6 bg-yellow-400 rounded flex items-center justify-center hover:bg-yellow-300;
 }
