reversed history and added hover names

--- a/frontend/src/gameindex.css
+++ b/frontend/src/gameindex.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
-/* used to hide scrollbar need to use css cuz tailwind dh for this rip */
+/* used to hide scrollbar need to use css cuz tailwind dh for this rip
 .hide-scrollbar
 {
 	scrollbar-width: none;
-}
+} */
