--- a/frontend/src/gamestyle.css
+++ b/frontend/src/gamestyle.css
@@ -67,6 +67,14 @@
 	@apply text-red-500 font-bold tracking-widest;
 }
 
+.tooltip-1 {
+	@apply absolute text-sm rounded-lg py-1 px-3 opacity-0  left-1/2 -translate-x-1/2 -bottom-11 bg-white/20 group-hover:opacity-100 transition-opacity whitespace-nowrap;
+}
+
+.tooltip-2 {
+	@apply absolute text-sm rounded px-3 opacity-0  left-1/2 -translate-x-1/2 -bottom-5 bg-yellow-400 font-semibold text-black group-hover:opacity-100 transition-opacity whitespace-nowrap;
+}
+
 
 /* body {
     margin: 0;
