--- a/frontend/src/gamestyle.css
+++ b/frontend/src/gamestyle.css
@@ -67,6 +67,10 @@
 	@apply text-red-500 font-bold tracking-widest;
 }
 
+.match-tie {
+	@apply py-2 bg-gray-500 rounded-xl text-center font-bold tracking-widest text-xl;
+}
+
 .tooltip-1 {
 	@apply absolute text-sm rounded-lg py-1 px-3 opacity-0  left-1/2 -translate-x-1/2 -bottom-11 bg-white/20 group-hover:opacity-100 transition-opacity whitespace-nowrap;
 }
